kubernetes/apps/network/stunner/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.kubernetes.io/hostname: "turn.mortebrume.eu"
    external-dns.kubernetes.io/target: "168.119.32.22"
    stunner.l7mp.io/enable-mixed-protocol-lb: "true"
  labels:
    stunner.l7mp.io/owned-by: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  name: stunner-external
spec:
  allocateLoadBalancerNodePorts: true
  externalIPs:
    - 168.119.32.22
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ports:
    - name: udp
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: tls
      port: 5349
      protocol: TCP
      targetPort: 5349
  selector:
    app: stunner
    stunner.l7mp.io/related-gateway-name: stunner
    stunner.l7mp.io/related-gateway-namespace: network
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: LoadBalancer
